# automated-greenhouse-management

./: README.md  greenhouse_logger.py  greenhouse_management.cpp  pyproject.toml  requirements_logger.txt
